Implement ListTablesAPI with in-memory persistence (#52)